kubernetes/manifests/lab-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-app-service
spec:
  # The ClusterIP exposes the service internally within the cluster.
  # The Ingress Controller will route external traffic to this internal IP.
  type: ClusterIP
  selector:
    app: lab-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
